[gd_scene load_steps=9 format=2]

[ext_resource path="res://games/SSCMiniGame/Assets/Scripts/TitleText.gd" type="Script" id=1]
[ext_resource path="res://games/SSCMiniGame/Assets/Fonts/TitleFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://games/SSCMiniGame/Assets/Images/ring.png" type="Texture" id=3]
[ext_resource path="res://games/SSCMiniGame/Assets/Images/Icons/noTitle.png" type="Texture" id=4]
[ext_resource path="res://games/SSCMiniGame/Assets/Images/Icons/tick.png" type="Texture" id=5]
[ext_resource path="res://games/SSCMiniGame/Assets/Images/Icons/cross.png" type="Texture" id=6]
[ext_resource path="res://audios/SSC/corrected.ogg" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 206, 15.25 )

[node name="TitleText" type="Node2D"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 413.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Formular für die Prüfungsanmeldung.pdf"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 206, 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="ring" type="Sprite" parent="."]
visible = false
position = Vector2( 206, 15.0704 )
scale = Vector2( 1, 0.22436 )
texture = ExtResource( 3 )

[node name="icon" type="Sprite" parent="."]
position = Vector2( 392.937, 23.7615 )
scale = Vector2( 0.127507, 0.127507 )
texture = ExtResource( 4 )

[node name="cross" type="Sprite" parent="."]
visible = false
position = Vector2( 430, 8 )
scale = Vector2( 0.416, 0.416 )
texture = ExtResource( 6 )

[node name="tick" type="Sprite" parent="."]
visible = false
position = Vector2( 430, 8 )
scale = Vector2( 0.222, 0.222 )
texture = ExtResource( 5 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
